k8s-deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-db
  labels:
    app: microshop
    component: checkout-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microshop
      component: checkout-db
  template:
    metadata:
      labels:
        app: microshop
        component: checkout-db
    spec:
      containers:
      - name: checkout-mariadb
        image: mariadb:10.5.9
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-db
  labels:
    app: microshop
    component: checkout-db
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: microshop
    component: checkout-db
