k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: microshop
  labels:
    app: microshop
    component: checkout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microshop
      component: checkout
  template:
    metadata:
      labels:
        app: microshop
        component: checkout
    spec:
      containers:
      - name: checkout
        image: quay.io/microshop/checkout:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: microshop
  labels:
    app: microshop
    component: checkout
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: microshop
    component: checkout
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout
  namespace: microshop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: checkout.dh4r4pvj.ga
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: checkout
                port:
                  number: 8080
  tls:
  - hosts:
    - checkout.dh4r4pvj.ga
    secretName: checkout-cert
